--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Welcome to My Website</h1>
     <p>This is my first webpage!</p>
     
-    <h2> <a href="./aboutme.html">About Me</a><p></h2>
+    <h2> <a href="aboutme.html">About Me</a><p></h2>
     
 </body>
 </html>
