--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Phacharawat's Note</title>
+    <title>Phacharawat Sriganlaya</title>
 </head>
 <body>
     <h1>Welcome to My Website</h1>
