--- a/index.html
+++ b/index.html
@@ -5,10 +5,46 @@
     <title>Phacharawat Sriganlaya</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is my first webpage!</p>
-    
-    <h2> <a href="aboutme.html">About Me</a><p></h2>
-    
+    <header>
+    <h1>🍃 Leaf & Bean Café</h1>
+    <nav>
+        <a href="#menu">เมนู</a>
+        <a href="#about">เกี่ยวกับเรา</a>
+        <a href="#contact">ติดต่อ</a>
+    </nav>
+</header>
+<main>
+    <!-- ส่วน Hero -->
+    <section>
+        <h2>กาแฟดี ๆ เริ่มต้นที่นี่</h2>
+        <p>คัดสรรเมล็ดกาแฟคุณภาพจากดอยสูง ชงสดใหม่ทุกแก้ว</p>
+    </section>
+
+    <!-- ส่วนเมนู -->
+    <section>
+        <h2>เมนูแนะนำ</h2>
+        <!-- จะเพิ่มการ์ดเมนูใน Section 2 -->
+    </section>
+
+    <!-- เรื่องราวร้าน — เนื้อหาอิสระ ใช้ <article> -->
+    <article>
+        <h2>เรื่องราวของเรา</h2>
+        <p>Leaf & Bean Café เกิดจากความรักในกาแฟ...</p>
+        <figure>
+            <img src="cafe-interior.jpg" alt="บรรยากาศภายในร้าน">
+            <figcaption>บรรยากาศสบาย ๆ ภายใน Leaf & Bean Café</figcaption>
+        </figure>
+    </article>
+</main>
+<aside>
+    <h3>🕐 เวลาเปิด-ปิด</h3>
+    <p>จันทร์ - ศุกร์: 7:00 - 20:00</p>
+    <p>เสาร์ - อาทิตย์: 8:00 - 21:00</p>
+</aside>
+
+<footer>
+    <p>&copy; 2026 Leaf & Bean Café</p>
+    <p>📍 ม.ศิลปากร วิทยาเขตสนามจันทร์ จ.นครปฐม</p>
+</footer>
 </body>
 </html>
