--- a/index.html
+++ b/index.html
@@ -46,5 +46,25 @@
     <p>&copy; 2026 Leaf & Bean Café</p>
     <p>📍 ม.ศิลปากร วิทยาเขตสนามจันทร์ จ.นครปฐม</p>
 </footer>
+<div>
+    <!-- การ์ดเมนูที่ 1 -->
+    <div>
+        <h3>☕ Espresso</h3>
+        <p>เข้มข้น หอมกรุ่น คั่วกลางจากดอยช้าง</p>
+        <p>฿55</p>
+    </div>
+    <!-- การ์ดที่ 2 -->
+    <div>
+        <h3>🍵 Matcha Latte</h3>
+        <p>ชาเขียวเกรดพรีเมียมจากอุจิ</p>
+        <p>฿75</p>
+    </div>
+    <!-- การ์ดที่ 3 -->
+    <div>
+        <h3>🧊 Cold Brew</h3>
+        <p>สกัดเย็น 18 ชั่วโมง นุ่มลึก</p>
+        <p>฿65</p>
+    </div>
+</div>
 </body>
 </html>
