--- a/index.html
+++ b/index.html
@@ -66,5 +66,28 @@
         <p>฿65</p>
     </div>
 </div>
+<div class="menu-grid">                     <!-- จัดเป็น Grid -->
+
+    <div class="card">                           <!-- class "card" ใช้ซ้ำได้ -->
+        <h3 class="card-title">☕ Espresso</h3>
+        <p class="card-desc">เข้มข้น หอมกรุ่น</p>
+        <span class="price">฿55</span>
+    </div>
+
+    <div class="card featured">                  <!-- 2 class: card + featured -->
+        <h3 class="card-title">🍵 Matcha Latte</h3>
+        <p class="card-desc">ชาเขียวเกรดพรีเมียม</p>
+        <span class="price">฿75</span>
+        <span class="badge bestseller">BEST SELLER</span>
+    </div>
+
+    <div class="card">
+        <h3 class="card-title">🧊 Cold Brew</h3>
+        <p class="card-desc">สกัดเย็น 18 ชั่วโมง</p>
+        <span class="price">฿65</span>
+        <span class="badge new">NEW</span>
+    </div>
+
+</div>
 </body>
 </html>
